Dec 19 edit: runs values not displayed fixed. mutation commoner fixed.

--- a/prop.config
+++ b/prop.config
@@ -1,4 +1,4 @@
-unsigned Seed      = 0;         \\ seed 
+unsigned Seed      = 1482160745;         \\ seed 
 int      Runs      = 1;         \\ runs 
 int      T         = 1000;       \\ time period of simulation
   
