--- a/prop.config
+++ b/prop.config
@@ -1,18 +1,18 @@
-unsigned Seed      = 1482160745;         \\ seed 
-int      Runs      = 1;         \\ runs 
+unsigned Seed      = 0;         \\ seed 
+int      Runs      = 10;         \\ runs 
 int      T         = 1000;       \\ time period of simulation
   
-int      n         = 8;         \\ no. of commoners / group size
-int      G         = 500;       \\ no. of groups
+int      n         = 4;         \\ no. of commoners / group size
+int      G         = 6;       \\ no. of groups
 int      K         = 4;         \\ no. of candidate strategies
   
-double   b         = 8;         \\ benefit factor
+double   b         = 10.0;         \\ benefit factor
 double   cx        = 1.0;       \\ cost of effort by commoners
-double   cy        = 1.0;       \\ cost of punishment effort
-double   cz        = 0.1;       \\ cost of norm effort 
+double   cy        = 0.25;     \\ cost of punishment effort
+double   cz        = 0.5;       \\ cost of norm effort 
   
 double   k         = 0.5;       \\ take off from payoff of commoners if punished
-double   delta     = 1;       \\ take off from payoff of leaders if punish
+double   delta     = 0.05;      \\ take off from payoff of leaders if punish
 double   Theta     = 0.2;       \\ tax
 
 double   Vc1       = 0.0;       \\ commoner random mutation probability
@@ -20,15 +20,15 @@ double   Vc2       = 0.0;       \\ commoner selective copying probability
 double   Vc3       = 0.25;       \\ commoner optimization probability
 
 double   Vl1       = 0.0;       \\ leader random mutation probability
-double   Vl2       = 0.0;       \\ leader selective copying probability
+double   Vl2       = 0.0;         \\ leader selective copying probability
 double   Vl3       = 0.25;       \\ leader optimization probability
 
 double   m         = 0.1;       \\ probability of selecting from other groups
 
 double   x0        = 0.5;       \\ half effort of commoners
 
-double   s0        = 0.0;      
-double   s1        = 0.7;
+double   s0        = 0.1;      
+double   s1        = 0.4;
 
 double   Lambda    = 40;
 
